[package]
name = "comex_owning_ref"
version = "0.4.1"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT"

description = "A library for creating references that carry their owner with them."
readme = "README.md"
documentation = "http://kimundi.github.io/owning-ref-rs/owning_ref/index.html"

repository = "https://github.com/Kimundi/owning-ref-rs"
keywords = ["reference", "sibling", "field", "owning"]

[dependencies]
comex_stable_deref_trait = { git = "https://github.com/comex/stable_deref_trait.git", branch = "master" }

#[patch.'https://github.com/comex/stable_deref_trait.git']
#comex_stable_deref_trait = { path = '/Users/comex/src/stable_deref_trait' }
